test/nginx_test/objs/autoconf.err


----------------------------------------
checking for C compiler


----------------------------------------
checking for gcc variadic macros


----------------------------------------
checking for C99 variadic macros


----------------------------------------
checking for unistd.h


----------------------------------------
checking for inttypes.h


----------------------------------------
checking for limits.h


----------------------------------------
checking for sys/filio.h


----------------------------------------
checking for crypt.h

objs/autotest.c:2:10: fatal error: 'crypt.h' file not found
#include <crypt.h>
         ^
1 error generated.
----------

#include <crypt.h>

int main() {
    return 0;
}

----------
gcc -o objs/autotest objs/autotest.c
----------

----------------------------------------
checking for malloc.h

objs/autotest.c:2:10: fatal error: 'malloc.h' file not found
#include <malloc.h>
         ^
1 error generated.
----------

#include <malloc.h>

int main() {
    return 0;
}

----------
gcc -o objs/autotest objs/autotest.c
----------

----------------------------------------
checking for atomic(3)

objs/autotest.c:8:69: warning: incompatible integer to pointer conversion passing 'int32_t' (aka 'int') to parameter of type 'volatile int32_t *' (aka 'volatile int *'); take the address with & [-Wint-conversion]
                          n = OSAtomicCompareAndSwap32Barrier(0, 1, lock);
                                                                    ^~~~
                                                                    &
/usr/include/libkern/OSAtomic.h:439:100: note: passing argument to parameter '__theValue' here
bool    OSAtomicCompareAndSwap32Barrier( int32_t __oldValue, int32_t __newValue, volatile int32_t *__theValue );
                                                                                                   ^
1 warning generated.

----------------------------------------
checking for poll()


----------------------------------------
checking for /dev/poll

objs/autotest.c:4:10: fatal error: 'sys/devpoll.h' file not found
#include <sys/devpoll.h>
         ^
1 error generated.
----------

#include <sys/types.h>
#include <unistd.h>
#include <sys/devpoll.h>

int main() {
    int  n, dp; struct dvpoll  dvp;
                  dp = 0;
                  dvp.dp_fds = NULL;
                  dvp.dp_nfds = 0;
                  dvp.dp_timeout = 0;
                  n = ioctl(dp, DP_POLL, &dvp);
    return 0;
}

----------
gcc -o objs/autotest objs/autotest.c
----------

----------------------------------------
checking for kqueue


----------------------------------------
checking for kqueue's NOTE_LOWAT


----------------------------------------
checking for kqueue's EVFILT_TIMER


----------------------------------------
checking for Darwin 64-bit kqueue millisecond timeout bug


----------------------------------------
checking for crypt()


----------------------------------------
checking for PCRE library


----------------------------------------
checking for zlib library


----------------------------------------
checking for int size

objs/autotest.c:11:5: warning: implicitly declaring library function 'printf' with type 'int (const char *, ...)'
    printf("%d", sizeof(int));
    ^
objs/autotest.c:11:5: note: include the header <stdio.h> or explicitly provide a declaration for 'printf'
objs/autotest.c:11:18: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
    printf("%d", sizeof(int));
            ~~   ^~~~~~~~~~~
            %lu
2 warnings generated.

----------------------------------------
checking for long size

objs/autotest.c:11:5: warning: implicitly declaring library function 'printf' with type 'int (const char *, ...)'
    printf("%d", sizeof(long));
    ^
objs/autotest.c:11:5: note: include the header <stdio.h> or explicitly provide a declaration for 'printf'
objs/autotest.c:11:18: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
    printf("%d", sizeof(long));
            ~~   ^~~~~~~~~~~~
            %lu
2 warnings generated.

----------------------------------------
checking for long long size

objs/autotest.c:11:5: warning: implicitly declaring library function 'printf' with type 'int (const char *, ...)'
    printf("%d", sizeof(long long));
    ^
objs/autotest.c:11:5: note: include the header <stdio.h> or explicitly provide a declaration for 'printf'
objs/autotest.c:11:18: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
    printf("%d", sizeof(long long));
            ~~   ^~~~~~~~~~~~~~~~~
            %lu
2 warnings generated.

----------------------------------------
checking for void * size

objs/autotest.c:11:5: warning: implicitly declaring library function 'printf' with type 'int (const char *, ...)'
    printf("%d", sizeof(void *));
    ^
objs/autotest.c:11:5: note: include the header <stdio.h> or explicitly provide a declaration for 'printf'
objs/autotest.c:11:18: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
    printf("%d", sizeof(void *));
            ~~   ^~~~~~~~~~~~~~
            %lu
2 warnings generated.

----------------------------------------
checking for uint64_t


----------------------------------------
checking for sig_atomic_t


----------------------------------------
checking for sig_atomic_t size

objs/autotest.c:11:5: warning: implicitly declaring library function 'printf' with type 'int (const char *, ...)'
    printf("%d", sizeof(sig_atomic_t));
    ^
objs/autotest.c:11:5: note: include the header <stdio.h> or explicitly provide a declaration for 'printf'
objs/autotest.c:11:18: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
    printf("%d", sizeof(sig_atomic_t));
            ~~   ^~~~~~~~~~~~~~~~~~~~
            %lu
2 warnings generated.

----------------------------------------
checking for socklen_t


----------------------------------------
checking for in_addr_t


----------------------------------------
checking for in_port_t


----------------------------------------
checking for rlim_t


checking for uintptr_t

checking for system endianess

----------------------------------------
checking for size_t size

objs/autotest.c:11:5: warning: implicitly declaring library function 'printf' with type 'int (const char *, ...)'
    printf("%d", sizeof(size_t));
    ^
objs/autotest.c:11:5: note: include the header <stdio.h> or explicitly provide a declaration for 'printf'
objs/autotest.c:11:18: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
    printf("%d", sizeof(size_t));
            ~~   ^~~~~~~~~~~~~~
            %lu
2 warnings generated.

----------------------------------------
checking for off_t size

objs/autotest.c:11:5: warning: implicitly declaring library function 'printf' with type 'int (const char *, ...)'
    printf("%d", sizeof(off_t));
    ^
objs/autotest.c:11:5: note: include the header <stdio.h> or explicitly provide a declaration for 'printf'
objs/autotest.c:11:18: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
    printf("%d", sizeof(off_t));
            ~~   ^~~~~~~~~~~~~
            %lu
2 warnings generated.

----------------------------------------
checking for time_t size

objs/autotest.c:11:5: warning: implicitly declaring library function 'printf' with type 'int (const char *, ...)'
    printf("%d", sizeof(time_t));
    ^
objs/autotest.c:11:5: note: include the header <stdio.h> or explicitly provide a declaration for 'printf'
objs/autotest.c:11:18: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
    printf("%d", sizeof(time_t));
            ~~   ^~~~~~~~~~~~~~
            %lu
2 warnings generated.

----------------------------------------
checking for setproctitle()

objs/autotest.c:7:5: warning: implicit declaration of function 'setproctitle' is invalid in C99 [-Wimplicit-function-declaration]
    setproctitle("test");;
    ^
1 warning generated.
Undefined symbols for architecture x86_64:
  "_setproctitle", referenced from:
      _main in autotest-849471.o
ld: symbol(s) not found for architecture x86_64
clang: error: linker command failed with exit code 1 (use -v to see invocation)
----------

#include <sys/types.h>
#include <unistd.h>


int main() {
    setproctitle("test");;
    return 0;
}

----------
gcc -o objs/autotest objs/autotest.c
----------

----------------------------------------
checking for pread()


----------------------------------------
checking for pwrite()


----------------------------------------
checking for strerror_r()


----------------------------------------
checking for gnu style strerror_r()


----------------------------------------
checking for localtime_r()


----------------------------------------
checking for posix_memalign()


----------------------------------------
checking for memalign()

objs/autotest.c:7:18: warning: implicit declaration of function 'memalign' is invalid in C99 [-Wimplicit-function-declaration]
    void *p; p = memalign(4096, 4096);
                 ^
objs/autotest.c:7:16: warning: incompatible integer to pointer conversion assigning to 'void *' from 'int' [-Wint-conversion]
    void *p; p = memalign(4096, 4096);
               ^ ~~~~~~~~~~~~~~~~~~~~
2 warnings generated.
Undefined symbols for architecture x86_64:
  "_memalign", referenced from:
      _main in autotest-555f9d.o
ld: symbol(s) not found for architecture x86_64
clang: error: linker command failed with exit code 1 (use -v to see invocation)
----------

#include <sys/types.h>
#include <unistd.h>
#include <stdlib.h>

int main() {
    void *p; p = memalign(4096, 4096);
    return 0;
}

----------
gcc -o objs/autotest objs/autotest.c
----------

----------------------------------------
checking for sched_yield()


----------------------------------------
checking for mmap(MAP_ANON|MAP_SHARED)


----------------------------------------
checking for mmap("/dev/zero", MAP_SHARED)


----------------------------------------
checking for System V shared memory


----------------------------------------
checking for struct msghdr.msg_control


----------------------------------------
checking for ioctl(FIONBIO)


----------------------------------------
checking for struct tm.tm_gmtoff

